--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <div class="col-md-6 col-md-offset-3">
 <a ng-click="create()" class="btn btn-success btn-block">Buy Assets</a>
 <br>
-<a ng-click="restore()" class="btn btn-primary btn-block">Contract Bid</a>
+<a ng-click="restore()" class="btn btn-primary btn-block">Withdraw XTZ/Assets</a>
 </div>
 </div>
 <div class="row ng-hide" ng-hide="setting.disclaimer">
