--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <div class="small-container">
 <div class="row">
 <div class="col-md-10 col-md-offset-1">
-<img class="logoBig" src="./index_files/logo.png">
+<img class="logoBig" src="./page/logo.png">
 <h2 class="header">TezBox Bid</h2>
 <h3 class="header">Asset Bidding on Tezos</h3>
 <br>
