--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <html lang="en" ng-app="popup" ng-csp="" class="ng-scope"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="./index_files/bootstrap.min.css">
-<link rel="stylesheet" href="./index_files/angular-csp.css">
-<link rel="stylesheet" href="./index_files/popup.css">
-<link rel="stylesheet" href="./index_files/fontawesome-all.min.css">
-<link href="./index_files/css" rel="stylesheet">
+<link rel="stylesheet" href="./page/bootstrap.min.css">
+<link rel="stylesheet" href="./page/angular-csp.css">
+<link rel="stylesheet" href="./page/popup.css">
+<link rel="stylesheet" href="./page/fontawesome-all.min.css">
+<link href="./page/css" rel="stylesheet">
 <title>TezBox.Bid - Tezos Contract Marketplace</title>
 </head><body>
 <!-- ngView:  --><div id="area" ng-view="" class="ng-scope"><div class="text-center ng-scope" style="padding-top:30px;">
@@ -38,7 +38,7 @@
 </div>
 </div>
 </div></div>
-<script src="./index_files/popup.js"></script>
+<script src="./page/popup.js"></script>
 
 
 
